--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-streamlit==1.37.1
-faiss-cpu==1.8.0.post1
-sentence-transformers==3.0.1
-numpy==1.26.4
-pandas==2.2.2
-PyPDF2==3.0.1
-python-dotenv==1.0.1
-openai>=1.30.0
+streamlit
+openai==0.28
+python-dotenv
+PyPDF2
